--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Welcome#index</h1>
-<%= link_to "Log in", "/auth/github" %>
+<div class="user_nav">
+  <% if current_user %>
+    Welcome, <%= current_user.name %>!
+    <%= link_to "Sign out", signout_path %>
+  <% else %>
+    <%= link_to "Log in", "/auth/github" %>
+  <% end %>
+</div>
